ubuntu/us-west-2/ubuntu2022jammy_with_net.tf
provider "aws" {
 
  region   = "us-west-2"
  profile = "default"
 
}
 
resource "aws_instance" "ubuntu22jammy" {
 
  ami                    = "MYAMIGOESHERE"
  instance_type          = "t2.small"
  key_name               = "aws_key"
  vpc_security_group_ids = [aws_security_group.main.id]
 
}
resource "aws_security_group" "main" {
  egress = [
    {
      cidr_blocks      = [ "0.0.0.0/0", ]
      description      = ""
      from_port        = 0
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "-1"
      security_groups  = []
      self             = false
      to_port          = 0
    }
  ]
 ingress                = [
   {
     cidr_blocks      = [ "0.0.0.0/0", ]
     description      = ""
     from_port        = 22
     ipv6_cidr_blocks = []
     prefix_list_ids  = []
     protocol         = "tcp"
     security_groups  = []
     self             = false
     to_port          = 22
  },
  {
     cidr_blocks      = [ "0.0.0.0/0", ]
     description      = ""
     from_port        = 443
     ipv6_cidr_blocks = []
     prefix_list_ids  = []
     protocol         = "tcp"
     security_groups  = []
     self             = false
     to_port          = 443
  }
  ]
}

resource "aws_key_pair" "deployer" {
  key_name   = "aws_key"
  public_key = "MYSSHPUBKEYGOESHERE"
}
